<resources>
    <string name="app_name">MatterHornLaw</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_demo_1_title">Submit Law Firms</string>
    <string name="app_demo_1_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="app_demo_2_title">Upload Videos</string>
    <string name="app_demo_2_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="forgot_pass_desc">Enter the email address you used when you joined
        and\nwe\'ll send you instructions to reset your password.\n\nFor security reasons, we do NOT strore password.\n
        So rest assued that we will never send you password\nvia email.</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="home_header_1">Providing a Calendar of Key Global Legal Practice Events</string>
    <string name="home_header_2">The Global Legal Practice Think <Tank></Tank></string>
    <string name="home_header_3">Providing Practical Advice on Global Legal Practice Management</string>
    <string name="connectWithSocialMedia">Connect with Social Media</string>
    <string name="forgotPassword"><u>Forgot Password?</u></string>
    <string name="latLongContactUs">40.7838063,-77.9268232</string>
    <string name="contactUs">Contact Us</string>
    <string name="address">Address</string>
    <string name="contactNumber">Contact Number</string>
    <string name="email">Email</string>
    <string name="addressValue">Matterhorn Law, 5th Floor, 1177 Avenue of the Americas, New York City, 10036, United States</string>
    <string name="contactNumberValue">+1 (859) 987-5697</string>
    <string name="emailValue">info@matterhornlaw.com</string>
    <string name="sendMessage">Send Message</string>
    <string name="matterhornLaw">Matterhorn Law</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last name</string>
    <string name="emailAddress">Email Address</string>
    <string name="phoneNum">Phone Number</string>
    <string name="country">Country</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="sendNow">Send Now</string>
    <string name="editProfile">Edit Profile</string>
    <string name="occupation">Occupation</string>
    <string name="interestedAreas">Interested Areas</string>
    <string name="optional">Optional</string>
    <string name="save">Save</string>
    <string name="pushNotifications">Push Notifications</string>
    <string name="newVideoUplaod">New Video Upload</string>
    <string name="newEventAdded">New Event Added/updated</string>
    <string name="upcomingEvent">Upcoming Event</string>
    <string name="videoApprovalRejection">Video Approval/Rejection Notification</string>
    <string name="newContentAdded">New Content Added by Admin</string>
    <string name="settings">Settings</string>
    <string name="resetPassword">Reset Password</string>
    <string name="currentPasword">Current Password</string>
    <string name="newPasword">New Password</string>
    <string name="confirmPasword">Confirm Password</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="termsConditions">Terms and Conditions</string>
    <string name="loremIpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="loremIpsum1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, wh</string>
    <string name="video_gallery">Video Gallery</string>
    <string name="my_video_gallery">My Video Gallery</string>
    <string name="submitEvent">Submit Event</string>
    <string name="eventTitle">Event Title</string>
    <string name="description">Description</string>
    <string name="additionalInformation">Additional Information</string>
    <string name="category">Category</string>
    <string name="venueTBA">Venue to be announced</string>
    <string name="venueLocation">Venue/Location</string>
    <string name="website">Website</string>
    <string name="registrationUrl">Registration URL</string>
    <string name="uploadLogo">Upload Logo</string>
    <string name="continue_reading">Continue reading</string>
    <string name="upload_event_logo">Upload Event Logo</string>
    <string name="uploadEventBanner">Upload Event Banner</string>
    <string name="uploadEventDocument">Upload Event Document</string>
    <string name="dateTBA">Date to be announced</string>
    <string name="startDate">Start Date</string>
    <string name="startTime">Start Time</string>
    <string name="endDate">End Date</string>
    <string name="endTime">End Time</string>
    <string name="byPostingEventAgreeTnC">By posting your event, you agree to our Terms of Use</string>
    <string name="submitNow">Submit Now</string>
    <string name="updateNow">Update Now</string>
    <string name="update_event">Update Event</string>
    <string name="files">Files</string>
    <string name="submitLawFirm">Submit Law Firm</string>
    <string name="lawFirmName">Law Firm Name</string>
    <string name="firmDescription">Firm Description</string>
    <string name="practiceAreas">Practice Areas</string>
    <string name="industrySectors">Industry Sectors</string>
    <string name="language">Languages</string>
    <string name="selectCountry">Select Country</string>
    <string name="lawFirmContactNum">Law Firm - Contact Number</string>
    <string name="lawFirmWebsite"> Law Firm - Website</string>
    <string name="linkedin">LinkedIn</string>
    <string name="twitter_url">Twitter url</string>
    <string name="how_did_you_hear_about_us">How did you hear about us?</string>
    <string name="matterhorn_term_condition">By clicking \"Sign up\" you indicate that you have read and agree with our Terms of use and Privacy Policy.</string>
    <string name="socialMediaLinks">Social Media Links</string>
    <string name="addMore">Add More</string>
    <string name="enterYourSocialUrl">Enter your %s profile URL</string>
    <string name="linkedIn">LinkedIn</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="googlePlus">Google+</string>
    <string name="howDidYouHearAboutUs">How did you hear about us?</string>
    <string name="byPostingFirmAgreeTnC">By posting your Firm, you agree to our Terms of use.</string>
    <string name="submit">Submit</string>
    <string name="search_here">Search here...</string>
    <string name="submitVideo">Submit Video</string>
    <string name="videoTitle">Video Title</string>
    <string name="videoDesc">Video Description</string>
    <string name="uploadAVideo">Upload a Video</string>
    <string name="byVideoUploadAgreeTerms">By video upload, you agree to our Terms &amp; Privacy Policy.</string>
    <string name="uploadNow">Upload Now</string>
    <string name="yourVideoUploadedSuccessfully">Your Video is uploaded successully for approval. We will send you confirmation email after approval.</string>
    <string name="uploadAnotherVideo">Upload another Video</string>
    <string name="google_maps_key">AIzaSyDG__0s_zt19ZCxhPj_dohDjk6dL1tBvao</string>
    <string name="introduction">Introduction</string>
    <string name="continueReading">Continue Reading</string>
    <string name="view_less">View Less</string>
    <string name="contactInfo">Contact Info</string>
    <string name="registerNow">Register Now</string>
    <string name="share">Share</string>
    <string name="markImportant">Mark Important</string>
    <string name="addTiCalendar">Add to Calendar</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="blog">Blog</string>
    <string name="skipForNow">Skip for now</string>
    <string name="globalLegalThinkTank">Global Legal Practice Think-Tank</string>
    <string name="aboutUs">About Us</string>
    <string name="theGlobalLegalThinkTank">The Global Legal Practice Think Tank</string>
    <string name="matterhornAbout1">Matterhorn Law is a research organization-  a global leagl practice think tank - dedicated to promoting the efficient practice of Law. </string>
    <string name="matterhornAbout2">Its scholars and researchers maintain this web based legal practice resource platform and understake research on significant legal practice issues with
        global application. As a result of its activities, Matterhorn Law provides practical advice on legal practice management for both in-house lega departments and law firms.</string>
    <string name="matterhornAbout3">Ongoing Research Initiatives</string>
    <string name="matterhornAbout4">The goal of Matterhorn Law is to promote efficieny in legal practice management. Such managemnet is often problematic. The issue that may arise
    in connection with the management of a legal practice are potentially infinite. \n\n\nThe first research initiative for the scholars
    and researchers at Matterhorn Law is in respect of the appropriate parameters for the organization of an in-house legal department.
    The second initiative is in respect of the determination of teh appropriate parameters for a law firm to take a decision to open an office
    outside of its home jurisdiction.</string>
    <string name="matterhornAbout5">The issues with respect to an in-house legal department may include the following:</string>
    <string name="matterhornAbout6">The issues with respect to a law firm with global aspirations may include the following:</string>
    <string name="matterhornAbout7">All contributors from the Matterhorn Law community of users in respect of these initiatives are welcome.</string>
    <string name="matterHornAboutInHouse">

        \u25CF How should an in-house legal department be organized for a company with global reach?
         \n\n\u25CF Should a legal department with global reach be centralized or decentralized?
         \n\n\u25CF What practice areas should be developed in-house?
        \n\n\u25CF What matters can be handled in-house?
         \n\n\u25CF If not, how should a law firm be chosen? For example, with respect to dispute resolution, are certain law firms better at certain types of disputes, e.g., construction disputes.
         \n\n\u25CF Should a law firm panel be organized and maintained?
         \n\n\u25CF What fee arrangements are appropriate for law firms? Should a success fee be considered in whole or in part?
         \n\n\u25CF How should a dispute with respect to the fees of a law firm be resolved?


    </string>
    <string name="matterHornAboutLegal">
        \u25CF When should a law firm contemplate the opening of an office outside of its home jurisdiction?
         \n\n\u25CF The international office should develop which practice areas?
         \n\n\u25CF The international office should develop expertise in respect of which industry sectors?

    </string>
</resources>