<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include layout="@layout/toolbar_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/home_header1_bg" />

                <com.matterhornlegal.customui.NMGTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/theGlobalLegalThinkTank"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_17sdp"
                    app:fontName="Museo_Slab_2.otf"/>

            </RelativeLayout>

            <com.matterhornlegal.customui.NMGTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/matterhornAbout1"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16sdp"
                app:fontName="Museo_Slab_2.otf" />

            <com.matterhornlegal.customui.NMGTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/matterhornAbout2"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:fontName="Roboto-Bold.ttf"/>

            <com.matterhornlegal.customui.NMGTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/matterhornAbout3"
                android:textColor="@color/colorTxtGreyD"
                android:textSize="@dimen/_18sdp"
                app:fontName="Museo_Slab_2.otf" />

            <com.matterhornlegal.customui.NMGTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/matterhornAbout4"
                android:textColor="@color/colorTxtGreyD"
                android:textSize="@dimen/_14sdp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:scaleType="fitXY"
                android:src="@drawable/about_mtr_2" />


            <com.matterhornlegal.customui.NMGTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/matterhornAbout5"
                android:textColor="@color/colorTxtGreyD"
                android:textSize="@dimen/_18sdp"
                app:fontName="Museo_Slab_2.otf" />


            <com.matterhornlegal.customui.NMGTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/matterHornAboutInHouse"
                android:textColor="@color/colorTxtGreyD"
                android:textSize="@dimen/_14sdp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:scaleType="fitXY"
                android:src="@drawable/about_mtr_3" />


            <com.matterhornlegal.customui.NMGTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/matterhornAbout6"
                android:textColor="@color/colorTxtGreyD"
                android:textSize="@dimen/_18sdp"
                app:fontName="Museo_Slab_2.otf" />

            <com.matterhornlegal.customui.NMGTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:text="@string/matterHornAboutLegal"
                android:textColor="@color/colorTxtGreyD"
                android:textSize="@dimen/_14sdp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@color/bgGreyLight" />

            <com.matterhornlegal.customui.NMGTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/matterhornAbout7"
                android:textColor="@color/colorTxtGreyD"
                android:textSize="@dimen/_18sdp"
                app:fontName="Museo_Slab_2.otf" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>