<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            ></LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnContactUs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/grey_border_btn_bg"
        android:text="@string/contactUs" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/grey_border_btn_bg"
        android:text="@string/settings" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/grey_border_btn_bg"
        android:text="@string/editProfile" />

    <Button
        android:id="@+id/btnPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/grey_border_btn_bg"
        android:text="@string/privacyPolicy" />

    <Button
        android:id="@+id/btnTermsConditions"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/grey_border_btn_bg"
        android:text="@string/termsConditions" />

</LinearLayout>